# tokens-counter

./: .gitignore  README.md  pyproject.toml
tokens_counter/: cli.py  counter.py  pdf_reader.py
